--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
-    "core-js": "^3.4.3",
+    "core-js": "^3.6.0",
     "element-ui": "^2.13.0",
+    "json-bigint": "^0.3.0",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3"
   },
